fix: card overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.project-desc * img{
+    display: none;
+}
